package mealmanager;

public class Ingredient {
    private GroceryItem item;
    private Quantity quantity;

    public Ingredient(GroceryItem item, double amount) {
        validateItem(item);
        Validators.validateDoublePositive(amount, "amount");

        this.item = item;
        this.quantity = new Quantity(amount, item.getMeasuringUnit());
    }

    private static void validateItem(GroceryItem item) {
        if (item == null) throw new IllegalArgumentException("item cannot be null");
    }

    public double getPrice() {
        return MathUtils.round(item.getUnitPrice(false) * getAmount());
    }

    public GroceryItem getGroceryItem() {
        return item;
    }

    public double getAmount() {
        return quantity.getAmount();
    }

    @Override
    public String toString() {
        return getAmount() + " " + item.getMeasuringUnit().toString() + " " + getGroceryItem().getName() + " — " + String.format("%.2f", getPrice()) + " kr";
    }
}
